manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "kubetestcluster-a65e"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "kubetestcluster-a65e"
    spec:
      containers:
        - name: "kubetestcluster-a65e"
          image: "kubetestregistry2.azurecr.io/kubetestcluster"
          ports:
          - containerPort: 80
